--- a/index.html
+++ b/index.html
@@ -1428,5 +1428,31 @@ body {
 }
     </style>
 </body>
+<style>
+  .container2 {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    width: 200px; /* You can adjust the width as per your preference */
+  }
 
+  img {
+    border-radius: 50%; /* Optional: Add border-radius for rounded image */
+  }
+</style>
+
+<div class="container2">
+  <img src="https://raw.githubusercontent.com/aitamweb/Faculty/main/2023/it/A5CSE00T06.png" alt="Avatar" style="width:90px">
+  <p><span>Dr. Y. RAMESH </span> Head Department of IT Department</p>
+  <p>Awesome Job Roshan</p>
+</div>
+
+<div class="container2">
+  <img src="https://img.freepik.com/premium-vector/professor-character-profession-avatar-mascot_186868-304.jpg" alt="Avatar" style="width:90px">
+  <p><span>Reventh Raj </span> Professor of IT Department</p>
+  <p>Good Job Roshan</p>
+</div>
+
+</div>
 </html>
