--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@ body {
 
 /* Styles for website counter container */
 .website-counter {
-  background-color: #ff4957;
+  background-color: #7840c1;
   height: 50px;
   width: 80px;
   color: white;
