--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ button.addEventListener('mouseleave', () => {
                   <div class="source-code-box">
                     <!-- Insert the source code content here or any additional information -->
                     <a
-                      href="https://github.com/Roshansaiketham/Roshan-myweb/blob/main/index.html"
+                      href="https://github.com/RoshansaiK/Roshan-Portfolio"
                       class="button button-secondary"
                       target="_blank"
                       rel="noopener noreferrer"
