--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ button.addEventListener('mouseleave', () => {
                   <div class="source-code-box">
                     <!-- Insert the source code content here or any additional information -->
                     <a
-                      href="https://github.com/RoshansaiK/Roshan-Portfolio"
+                      href="https://github.com/Roshansaiketham/Roshan-myweb/blob/main/index.html"
                       class="button button-secondary"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -1444,13 +1444,19 @@ body {
 
 <div class="container2">
   <img src="https://raw.githubusercontent.com/aitamweb/Faculty/main/2023/it/A5CSE00T06.png" alt="Avatar" style="width:90px">
-  <p><span>Dr. Y. RAMESH </span> Head Department of IT Department</p>
+  <p><span>Dr. Yegireddi Ramesh</span> Head Department of IT Department at AITAM College</p>
   <p>Awesome Job Roshan</p>
+</div>
+<div class="container2">
+  <img src="https://raw.githubusercontent.com/aitamweb/Faculty/main/2023/it/A5INT00T31.png" alt="Avatar" style="width:90px">
+  <p><span>Dr. Naresh Tangudu</span>
+    Assistant Professor of IT Department at AITAM College</p>
+  <p>Nice Job Roshan</p>
 </div>
 
 <div class="container2">
   <img src="https://img.freepik.com/premium-vector/professor-character-profession-avatar-mascot_186868-304.jpg" alt="Avatar" style="width:90px">
-  <p><span>Reventh Raj </span> Professor of IT Department</p>
+  <p><span>Sri. Dasari Reventh Raj</span> Professor of IT Department at AITAM College</p>
   <p>Good Job Roshan</p>
 </div>
 
