--- a/index.html
+++ b/index.html
@@ -1456,9 +1456,10 @@ body {
 
 <div class="container2">
   <img src="https://img.freepik.com/premium-vector/professor-character-profession-avatar-mascot_186868-304.jpg" alt="Avatar" style="width:90px">
-  <p><span>Sri. Dasari Reventh Raj</span> Professor of IT Department at AITAM College</p>
+  <p><span>Sri. Dasari Reventh Raj</span> Assistant Professor of IT Department at AITAM College</p>
   <p>Good Job Roshan</p>
 </div>
 
 </div>
 </html>
+
