--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,15 @@ body {
    
  
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/><br>
+        .testimonial-section h2 {
+      color: black;
+      text-align: center;
+    }
+  </style>
+  <div class="testimonial-section">
+    <h2>Client Testimonials</h2>
+  </div>
 <div class="faculty-container">
   <figure class="snip1390">
     <img src="https://raw.githubusercontent.com/aitamweb/Faculty/main/2023/it/A5CSE00T06.png" alt="profile-sample3" class="profile" />
