--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,8 @@ body {
  
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/><br>
-        .testimonial-section h2 {
+      <style>
+    .testimonial-section h2 {
       color: black;
       text-align: center;
     }
